# testing_cuda

./: .gitignore  CMakeLists.txt  test.cu  test.cuh
include/: common.h  em_mm_types.h
testing_cublas/: CMakeLists.txt  test.cu
testing_cublas/include/: em_mm_types.h  my_cublas_app.h
testing_cusolver/: CMakeLists.txt  test.cu
testing_cusolver/include/: common.h
